// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge > inset 1`] = `
<DocumentFragment>
  <div
    class="rmwc-badge rmwc-badge--align-end rmwc-badge--no-content"
    style="--rmwc-badge-inset: 10rem;"
  >
     
  </div>
</DocumentFragment>
`;

exports[`Badge > renders with label 1`] = `
<DocumentFragment>
  <div
    class="rmwc-badge rmwc-badge--align-end"
  >
    New
  </div>
</DocumentFragment>
`;

exports[`BadgeAnchor > renders 1`] = `
<DocumentFragment>
  <div
    class="rmwc-badge-anchor"
  />
</DocumentFragment>
`;
